--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "css-select",
+  "name": "css",
   "version": "0.0.0",
-  "homepage": "https://github.com/panlina/css-select",
+  "homepage": "https://github.com/panlina/css",
   "author": "Jack Lu <jacklu@jacklu.me>",
   "dependencies": {
     "css-what": "^2.1.0",
